--- a/index.html
+++ b/index.html
@@ -14,30 +14,22 @@
     </div>
     <div class="container">
       <h1>Text mOcKiFy</h1>
-      <div class="box">
-        <div class="input">
-          <textarea id="in" placeholder="your text here"></textarea>
-        </div>
-        <br />
-        <div class="output">
-          <textarea id="out" placeholder="mOcKeD tExT hErE" readonly></textarea>
-        </div>
+      <div class="input">
+        <textarea id="in" placeholder="your text here"></textarea>
       </div>
       <br />
 
-      <div class = "buttons">
+      <div class="buttons">
         <div>
-            <button onclick="mockButton()">mOcKiFy</button>
-          </div>
-          <div>
-            <button onclick="Copy()">Copy</button>
-          </div>
-          <div>
-            <button onclick="Clear()">Clear</button>
-          </div>
-
+          <button id="mock" onclick="mockButton()">mOcKiFy</button>
+        </div>
+        <div>
+          <button id="pause" onclick="Copy()">Copy</button>
+        </div>
+        <div>
+          <button id="clear" onclick="Clear()">Clear</button>
+        </div>
       </div>
-
     </div>
 
     <script src="script.js"></script>
