--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
           <button id="mock" onclick="mockButton()">mOcKiFy</button>
         </div>
         <div>
-          <button id="pause" onclick="Copy()">Copy</button>
+          <button id="copy" onclick="Copy()">Copy</button>
         </div>
         <div>
           <button id="clear" onclick="Clear()">Clear</button>
         </div>
+      </div>
+
+      <div class="output">
+        <p id="out">mOcKeD tExT hErE</p>
       </div>
     </div>
 
