--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <button id="mock" onclick="mockButton()">mOcKiFy</button>
         </div>
         <div>
-          <a id="copy" onclick="Copy()">Copy</a>
+          <button id="copy" onclick="Copy()">Copy</button>
         </div>
         <div>
           <button id="clear" onclick="Clear()">Clear</button>
